--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#4CAF50",
     "icons": [
         {
-            "src": "icon.png",
+            "src": "calc.png",
             "sizes": "192x192",
             "type": "image/png"
         }
